@@ -1,3 +1,8 @@
+2004-08-22  Moritz Schulte  <moritz@g10code.com>
+
+	* secmem.c (_gcry_secmem_init): Try to lock pool into core not
+	only when running with root privileges.
+
 2004-08-16  Werner Koch  <wk@g10code.de>
 
 	* secmem.c (_gcry_secmem_init): Defer printing of the warning.
